// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CBadge /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-badge css-1f1oimr"
  >
    this is a badge
  </div>
</DocumentFragment>
`;

exports[`<CLink /> should render properly 1`] = `
<DocumentFragment>
  <a
    class="chakra-link css-xisxf"
  >
    CLink
  </a>
  <a
    class="chakra-link css-xisxf"
    rel="noopener noreferrer"
    target="_blank"
  >
    CLink external
  </a>
</DocumentFragment>
`;

exports[`<CStack /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-x9juev"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
  <div
    class="chakra-stack-horizontal css-84zodg"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
  <div
    class="chakra-stack-vertical css-owjkmg"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</DocumentFragment>
`;
